# ShanghaiTech-CS100-2024Spring-HW

./: README.md  pacman_test.c
23fall-hw7/hw7/prob1/: description.md
23fall-hw7/hw7/prob2/: description.md
23fall-hw7/hw7/prob2/attachments/: example.cpp  quantity.hpp
23fall-hw7/hw7_solution/prob1/solution/: dynarray.hpp
23fall-hw7/hw7_solution/prob2/solution/: quantity_direct.hpp  quantity_metafunc.hpp  quantity_mixed_arith.hpp  readme.md
CS100_2024Fall_hw2/: CS100_2024Fall_hw2.md
CS100_2024Fall_hw4_p1/: description.md  grading.md  linkedList.md
CS100_2024Fall_hw4_p1/assignment/: snake.c  utils.h
CS100_2024Fall_hw4_p1/demo/: snake_linux  snake_macos
CS100_2024Fall_hw4_p1_laodai/: snake.c  snake.h
CS100_2024Fall_hw8/: README.md
CS100_2024Fall_hw8/assignments/include/runaway/Framework/: SpriteManager.hpp  TextBase.hpp
CS100_2024Fall_hw8/assignments/include/runaway/GameObject/: GameObject.hpp  Player.hpp  Projectiles.hpp
CS100_2024Fall_hw8/assignments/include/runaway/GameWorld/: GameWorld.hpp
CS100_2024Fall_hw8/assignments/src/Framework/: ObjectBase.cpp  SpriteManager.cpp  TextBase.cpp
CS100_2024Fall_hw8/assignments/src/GameObject/: GameObject.cpp  Player.cpp  Projectiles.cpp
CS100_2024Fall_hw8/assignments/src/GameWorld/: GameWorld.cpp
HW4/.obsidian/: workspace.json
HW4/Pacman！/: pacman.c
HW4/attachments/: pacman.c
assignments/: .gitignore
assignments/HW8/attachments/include/pvz/Plant/: Plant.hpp  Sunflower.hpp
assignments/HW8/attachments/include/pvz/SeedButton/: SeedButton.hpp  WallnutSeed.hpp
assignments/HW8/attachments/src/GameObject/: Sun.cpp
assignments/HW8/attachments/src/Plant/: CMakeLists.txt
assignments/HW8/attachments/src/Zombie/: Zombie.cpp
assignments/HW8/docs/: FAQ.md
assignments/HW8/include/pvz/GameObject/: CooldownMask.hpp  Shovel.hpp
assignments/HW8/src/Environment/: Background.cpp
assignments/HW8/src/GameWorld/: CMakeLists.txt
assignments/HW8/src/Plant/: Wallnut.cpp
assignments/HW8/src/SeedButton/: CherryBombSeed.cpp  PeashooterSeed.cpp  SunflowerSeed.cpp
assignments/HW8/src/Zombie/: CMakeLists.txt
assignments/include/runaway/GameObject/: Axe.hpp  Background.hpp  Bullet.hpp  Enemies.hpp  Player.hpp  Projectiles.hpp
assignments/include/runaway/GameWorld/: GameWorld.hpp
assignments/src/: main.cpp
assignments/src/Framework/: GameManager.cpp
assignments/src/GameObject/: Axe.cpp  Bullet.cpp  Enemies.cpp  Player.cpp
assignments/src/GameWorld/: GameWorld.cpp
homework1/: Problem2.c  Problem3.c  Problem4.c
homework2/: 2.c  2_improved.c  3.c  4.c  5.c
homework3/: P2.c  P3.c  data_gen.py  p4.c  solution.c
hw4_my_work/pacman/: pacman.c
hw4_my_work/pacman/maps/: level0.txt
hw4_original/.obsidian/: workspace.json
hw5/prob1/: prob1.cpp
hw5/prob2/attachments/: dynarray.hpp
hw7_problem1/: description_ch.md
hw7_problem1/attachments/: example.cpp  expr.hpp
hw7_problem2/: description.md
hw7_problem2/attachments/: type_check.hpp
hw7_runaway/include/runaway/Framework/: WorldBase.hpp
hw7_runaway/include/runaway/GameObject/: Axe.hpp  Bullet.hpp  Enemies.hpp  GameObject.hpp  Player.hpp  Projectiles.hpp
hw7_runaway/include/runaway/GameWorld/: GameWorld.hpp
hw7_runaway/src/Framework/: WorldBase.cpp
hw7_runaway/src/GameObject/: Axe.cpp  Background.cpp  Bullet.cpp  CMakeLists.txt  Enemies.cpp  Player.cpp  Projectiles.cpp
hw7_runaway/src/GameWorld/: GameWorld.cpp
hw7_runaway_v2/include/runaway/Framework/: GameManager.hpp
hw7_runaway_v2/include/runaway/GameObject/: Enemies.hpp
hw7_runaway_v2/src/GameObject/: CMakeLists.txt  Enemies.cpp
hw7_runaway_v2/src/GameWorld/: GameWorld.cpp
hw8/attachments/: CMakeLists.txt
hw8/attachments/include/pvz/GameObject/: Background.hpp  CherryBomb.hpp  CherryBombSeed.hpp  CooldownMask.hpp  GameObject.hpp  HoldingSeed.hpp  Pea.hpp  Peashooter.hpp  PeashooterSeed.hpp  Plant.hpp  PlantingSpot.hpp  PoleVaultingZombie.hpp  RegularZombie.hpp  RepeaterSeed.hpp  SeedButton.hpp  Sunflower.hpp  SunflowerSeed.hpp  WallnutSeed.hpp  Zombie.hpp
hw8/attachments/include/pvz/GameWorld/: GameWorld.hpp
hw8/attachments/include/pvz/Plant/: CherryBomb.hpp  Peashooter.hpp  Wallnut.hpp
hw8/attachments/src/GameObject/: Background.cpp  CMakeLists.txt  CherryBomb.cpp  CherryBombSeed.cpp  CooldownMask.cpp  Explosion.cpp  GameObject.cpp  HoldingSeed.cpp  Pea.cpp  Peashooter.cpp  PeashooterSeed.cpp  Plant.cpp  PlantingSpot.cpp  PoleVaultingZombie.cpp  RegularZombie.cpp  RepeaterSeed.cpp  SeedButton.cpp  Shovel.cpp  Sun.cpp  Sunflower.cpp  SunflowerSeed.cpp  WallnutSeed.cpp  Zombie.cpp
hw8/attachments/src/GameWorld/: CMakeLists.txt  GameWorld.cpp
hw8/attachments/src/Plant/: Peashooter.cpp  Plant.cpp
hw8/attachments/src/SeedButton/: CMakeLists.txt  SeedButton.cpp
hw8/attachments/src/Zombie/: RegularZombie.cpp
hw8/include/pvz/Environment/: PlantingSpot.hpp
hw8/include/pvz/GameObject/: Explosion.hpp  Sun.hpp
hw8/include/pvz/Plant/: CherryBomb.hpp
hw8/include/pvz/Zombie/: RegularZombie.hpp
hw8/src/Environment/: CMakeLists.txt  PlantingSpot.cpp
hw8/src/Plant/: CherryBomb.cpp  Sunflower.cpp
hw8/src/SeedButton/: WallnutSeed.cpp
include/runaway/: utils.hpp
include/runaway/Framework/: ObjectBase.hpp
include/runaway/GameObject/: Enemies.hpp
prob1/dynarray/: dynarray.hpp
prob2/attachments/: main.cpp
prob3/: description.md
prob3/attachments/: ScoreBoard.hpp  ScoreBoard_hint1.hpp  main.cpp  utils.hpp
prob3/attachments/ScoreBoard/: main.cpp
src/GameWorld/: GameWorld.cpp
submit/include/pvz/GameObject/: Background.hpp  CherryBombSeed.hpp  Pea.hpp  RegularZombie.hpp  Sunflower.hpp  Wallnut.hpp
submit/include/pvz/GameWorld/: GameWorld.hpp
submit/src/GameObject/: CherryBombSeed.cpp  Peashooter.cpp  Plant.cpp  PlantingSpot.cpp  PoleVaultingZombie.cpp  Wallnut.cpp  WallnutSeed.cpp
submit/src/GameWorld/: GameWorld.cpp
